--- a/model_more/src/main/res/layout/more_act_layout.xml
+++ b/model_more/src/main/res/layout/more_act_layout.xml
@@ -7,8 +7,16 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="More组件" />
+
+
+    <Button
+        android:onClick="goList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="跳到list页面"
+        />
 
 </LinearLayout>
