--- a/model_app/src/main/res/layout/launcher_layout.xml
+++ b/model_app/src/main/res/layout/launcher_layout.xml
@@ -21,4 +21,10 @@
         android:layout_height="wrap_content"
         android:onClick="more"
         android:text="More页面" />
+
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 </LinearLayout>
